Refactor AuthController and UserController to improve response types; add UserListDTO for user data representation; enhance AuthService and UserService to include user ID and description in responses.