@@ -1,19 +1,18 @@
 package br.edu.utfpr.alunos.webpet.controllers;
 
-import br.edu.utfpr.alunos.webpet.domain.user.User;
-import br.edu.utfpr.alunos.webpet.dto.ResponseDTO;
-import br.edu.utfpr.alunos.webpet.repositories.UserRepository;
-import br.edu.utfpr.alunos.webpet.services.UserService;
-import br.edu.utfpr.alunos.webpet.utils.enums.UserType;
-import lombok.RequiredArgsConstructor;
+import java.util.List;
+import java.util.Map;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import br.edu.utfpr.alunos.webpet.dto.ResponseDTO;
+import br.edu.utfpr.alunos.webpet.dto.UserListDTO;
+import br.edu.utfpr.alunos.webpet.repositories.UserRepository;
+import br.edu.utfpr.alunos.webpet.services.UserService;
+import lombok.RequiredArgsConstructor;
 
 @RestController
 @RequestMapping("/user")
@@ -24,18 +23,17 @@ public class UserController {
 
     @GetMapping("/users")
     public ResponseEntity<ResponseDTO> getUsers() {
-        List<User> users = userRepository.findAll().stream()
-                .map(user -> new User(
+        List<UserListDTO> users = userRepository.findAll().stream()
+                .map(user -> new UserListDTO(
                         user.getId(),
                         user.getName(),
                         user.getEmail(),
                         user.getPhone(),
                         user.getCpf(),
                         user.getCnpj(),
-                        user.getUserType(),
-                        user.getPassword() // Exclude password
+                        user.getUserType()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Object> data = Map.of("users", users);
         return ResponseEntity.ok(ResponseDTO.success("Lista de usuários obtida com sucesso", data));
